kubernetes/hashicorp-vault-extras/resources.yml
# default deny
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-default-deny-ingress
  namespace: hashicorp-vault
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-allow-external-secrets
  namespace: hashicorp-vault
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault
      component: server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: external-secrets-system
      ports:
        - protocol: TCP
          port: 8200
    - ports:
        - protocol: TCP
          port: 15008
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: vault-access
  namespace: hashicorp-vault
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
      component: server
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/external-secrets-system/sa/external-secrets
      to:
        - operation:
            ports:
              - "8200"
    - from:
        - source:
            notPrincipals:
              - "*"
      to:
        - operation:
            ports:
              - "8200"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-allow-tailscale-proxy
  namespace: hashicorp-vault
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault
      component: server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
          podSelector:
            matchLabels:
              tailscale.com/managed: "true"
              tailscale.com/parent-resource: vault-ts-ingress
              tailscale.com/parent-resource-ns: hashicorp-vault
      ports:
        - protocol: TCP
          port: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ts-ingress
  namespace: hashicorp-vault
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - vault
  defaultBackend:
    service:
      name: vault-ui
      port:
        number: 8200
